<resources>
    <string name="app_name">Crime Advisor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu">Menu</string>
    <string name="year">Year</string>
    <string name="info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="select_year">Select Year</string>
    <string name="select_year_btn_text">Select Year</string>
    <string name="current_year">2022</string>
    <string name="select">Select</string>
    <string name="confirm">confirm</string>
    <string name="pick_crimes">Pick Crimes To Display</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="place_holder">place_holder</string>
    <string name="checkbox">CheckBox</string>
<<<<<<< HEAD
    <string name="total_crime_case">Total Crime Case</string>
    <string name="_red_level_7500">7500+</string>
    <string name="_orange_level_5000_7500">5000-7500</string>
    <string name="_yellow_level_2500_5000">2500-5000</string>
    <string name="_green_level_0_2500">0-2500</string>
    <string name="_Info">Each color represents a total number of criminal records for given district.</string>
=======
    <string name="select_crimes">Select Crimes</string>
>>>>>>> 9fb971a39559e5acaccc2c1439439e6ef02d1ba7
</resources>