<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InfoFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0pt"
        android:text="@string/total_crime_case"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="389dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/red" />

            <TextView
                android:id="@+id/redLevel"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_red_level_7500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/orange" />

            <TextView
                android:id="@+id/orangeLevel"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_orange_level_5000_7500" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/yellow" />

            <TextView
                android:id="@+id/yellowLevel"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_yellow_level_2500_5000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/green" />

            <TextView
                android:id="@+id/greenLevel"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_green_level_0_2500" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView7"

            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:text="@string/_Info" />

        <Button
            android:id="@+id/button3"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:text="OK" />

    </LinearLayout>

</FrameLayout>